--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="main.css">
-</head>
+    <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="main.css">
+    </head>
 
-<body onload="init()">
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-  <h1>This is a gameboard where you catch the enemy!</h1>
-  <p>Catch the enemy by moving up, down, left right with the arrow keys.</p>
-  <div class="gameboard"></div>
-  <script src="main.js"></script>
-</body>
+    <body onload="init()">
+    <!--[if IE]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
+        <h1>This is a gameboard where you catch the enemy!</h1>
+        <p>Catch the enemy by moving up, down, left right with arrow keys.</p>
+        <div class="gameboard"></div>
+        <script src="main.js"></script>
+    </body>
 
 </html>
